# BMSTU_project

backend/: pom.xml
backend/front/src/components/: Login.jsx  NavigationBar.jsx  SideBar.jsx
backend/src/main/java/com/example/BackEnd/controllers/: ArtistController.java  CountryController.java  LoginController.java  MuseumController.java  PaintingController.java  UserController.java
backend/src/main/java/com/example/BackEnd/models/: Artist.java  Country.java  Museum.java  Painting.java  User.java
backend/src/main/java/com/example/BackEnd/repositories/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  PaintingRepository.java  UserRepository.java
backend/src/main/java/com/example/BackEnd/tools/: DataValidationException.java  Utils.java
backend/src/main/resources/: application.properties
first_cleint/: local.properties  settings.gradle
first_cleint/app/: build.gradle
first_cleint/app/src/main/: AndroidManifest.xml
first_cleint/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
first_cleint/app/src/main/java/com/example/firstclient/: MainActivity.java  PinpadActivity.java  TransactionEvents.java
first_cleint/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
first_cleint/app/src/main/res/values/: themes.xml
first_cleint/app/src/main/res/values-night/: themes.xml
first_cleint/gradle/wrapper/: gradle-wrapper.properties
